--- a/Pointer/makefile
+++ b/Pointer/makefile
@@ -1,17 +1,18 @@
-CFLAGS = -Wall -Wextra -Wpedantic
+CFLAGS = -Wall -Wextra -Wpedantic -g
 CC = g++
-LDFLAGS = 
-SOURCES = main.cpp
+LDFLAGS =  -lMyPtr 
+SOURCES =  main.cpp 
 OBJECTS = $(SOURCES:.cpp=.o)
 EXECUTABLE = program
 
+
 #Rule which build all project
 all: clean $(OBJECTS)
-	$(CC) $(OBJECTS) -o $(EXECUTABLE)
-
+	$(CC) $(OBJECTS) -o $(EXECUTABLE) 
+	
 #Rule to build obj files
 $(OBJECTS): 
-	$(CC) -c $(CFLAGS) $(SOURCES)
+	$(CC) -c $(CFLAGS) $(SOURCES) 
 
 #Rule to clean
 clean: 
